--- a/src/views/layouts/main-layout.ejs
+++ b/src/views/layouts/main-layout.ejs
@@ -156,7 +156,6 @@
               </svg>
             </a>
           </li>
-
           <!-- Dynamic Categories -->
           <% categories.forEach(category=> { %>
           <li
@@ -189,8 +188,8 @@
         </ul>
       </div>
     </nav>
-    <% } %> <%- include(content) %>
-
+    <% } %>
+     <%- include(content) %>
     <footer
       class="flex flex-col items-center justify-between gap-8 border-t-2 border-t-zinc-300 p-6 text-center shadow-[0_-4px_6px_-1px_rgba(0,0,0,0.1)] xl:px-20"
     >
