--- a/src/views/pages/create-post.ejs
+++ b/src/views/pages/create-post.ejs
@@ -1,81 +1,138 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create a post</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="https://cdn.tiny.cloud/1/zdydn25rh7p4n5ascy4i8ktwypa83h58l70erb1yga9fxd2e/tinymce/7/tinymce.min.js"
-        referrerpolicy="origin"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            tinymce.init({
-                selector: '#content', // Chọn textarea để sử dụng TinyMCE
-                plugins: 'image media link',
-                toolbar: 'undo redo | styles | bold italic | link image | media',
-                images_upload_url: '/upload/image', // URL để upload hình ảnh
-                media_url_restrict: false,
-                setup: function (editor) {
-                    editor.on('change', function () {
-                        editor.save();
-                    });
-                },
-            });
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    tinymce.init({
+      selector: "#content", // Chọn textarea để sử dụng TinyMCE
+      plugins: "image media link",
+      toolbar: "undo redo | styles | bold italic | link image | media",
+      images_upload_url: "/upload/image", // URL để upload hình ảnh
+      media_url_restrict: false,
+      setup: function (editor) {
+        editor.on("change", function () {
+          editor.save();
         });
-    </script>
-</head>
+      },
+    });
+  });
+</script>
 
 <body>
-    <div class="container mx-auto py-5" style="width: 1000px;">
-        <h1 class="text-4xl font-bold mb-6 text-center">Post New Article</h1>
-        <form action="/writer/send_post" method="POST" enctype="multipart/form-data">
-            <div class="mb-4">
-                <label for="title" class="block text-sm font-medium text-gray-700">Title</label>
-                <input type="text" id="title" name="name" required
-                    class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 h-12 p-2">
-            </div>
-            <div class="mb-4">
-                <label for="author" class="block text-sm font-medium text-gray-700">Author</label>
-                <input type="text" id="author" name="author" required
-                    class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200 h-12 p-2">
-            </div>
-            <div class="mb-4">
-                <label for="summary" class="block text-sm font-medium text-gray-700">Summary</label>
-                <textarea id="summary" name="summary" required
-                    class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2"></textarea>
-            </div>
-            <div class="mb-4">
-                <label for="content" class="block text-sm font-medium text-gray-700">Content</label>
-                <textarea id="content" name="content" required
-                    class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm"></textarea>
-            </div>
-            <div class="mb-4">
-                <label for="category" class="block text-sm font-medium text-gray-700">Category</label>
-                <select id="category" name="category"
-                    class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm">
-                    <% categories.forEach(function(category) { %>
-                        <option value="<%= category.id %>"><%= category.name %></option>
-                    <% }); %>
-                </select>
-            </div>
-            <div class="mb-4">
-                <label for="tags" class="block text-sm font-medium text-gray-700">Tags</label>
-                <div id="tags-container" class="mt-1 block border border-gray-300 rounded-md shadow-sm p-2">
-                    <% tags.forEach(function(tag) { %>
-                        <label class="inline-flex items-center space-x-2 mr-4">
-                            <input type="checkbox" name="tags" value="<%= tag.id %>">
-                            <span><%= tag.tag %></span>
-                        </label>
-                    <% }); %>
-                </div>
-            </div>
-            <div class="flex justify-center mt-4">
-                <button type="submit" class="bg-gray-800 text-white px-4 py-2 rounded">Submit</button>
-            </div>
-        </form>
-    </div>
-</body>
+  <div class="container mx-auto py-5" style="width: 1000px">
+    <h1 class="mb-6 text-center text-4xl font-bold">Post New Article</h1>
+    <form action="/post" method="POST" enctype="multipart/form-data">
+      <div class="mb-4">
+        <label for="title" class="block text-sm font-medium text-gray-700"
+          >Title</label
+        >
+        <input
+          type="text"
+          id="title"
+          name="name"
+          required
+          class="mt-1 block h-12 w-full rounded-md border border-gray-300 p-2 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200"
+        />
+      </div>
 
-</html>
+      <div class="mb-4">
+        <label
+          for="summary"
+          class="none block text-sm font-medium text-gray-700"
+          >Summary</label
+        >
+        <textarea
+          id="summary"
+          name="summary"
+          required
+          class="mt-1 block w-full resize-none rounded-md border border-gray-300 p-2 shadow-sm"
+        ></textarea>
+      </div>
+
+      <div class="mb-4 flex flex-row items-center gap-4">
+        <input type="checkbox" name="premium" id="summary" required />
+        <label
+          for="premium"
+          class="none block text-sm font-medium text-gray-700"
+          >Premium?</label
+        >
+      </div>
+
+      <div class="mb-4">
+        <label
+          for="thumbnail-large"
+          class="block text-sm font-medium text-gray-700"
+          >Thumbnail (large version)</label
+        >
+        <input
+          id="thumbnail-large"
+          name="thumbnail-large"
+          required
+          type="file"
+          accept="image/jpeg, image/gif, image/png, image/webp, image/bmp"
+          class="mt-1 block w-full rounded-md border border-gray-300 p-2 shadow-sm"
+        />
+      </div>
+
+      <div class="mb-4">
+        <label
+          for="thumbnail-small"
+          class="block text-sm font-medium text-gray-700"
+          >Thumbnail (small version)</label
+        >
+        <input
+          id="thumbnail-small"
+          name="thumbnail-small"
+          required
+          type="file"
+          accept="image/jpeg, image/gif, image/png, image/webp, image/bmp"
+          class="mt-1 block w-full rounded-md border border-gray-300 p-2 shadow-sm"
+        />
+      </div>
+
+      <div class="mb-4">
+        <label for="content" class="block text-sm font-medium text-gray-700"
+          >Content</label
+        >
+        <textarea
+          id="content"
+          name="content"
+          required
+          class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm"
+        ></textarea>
+      </div>
+
+      <div class="mb-4">
+        <label for="category" class="block text-sm font-medium text-gray-700"
+          >Category</label
+        >
+        <select
+          id="category"
+          name="category"
+          class="mt-1 block w-full rounded-md border border-gray-300 shadow-sm"
+        >
+          <% availCategories.forEach(function(category) { %>
+          <option value="<%= category._id %>"><%= category.name %></option>
+          <% }); %>
+        </select>
+      </div>
+
+      <div class="mb-4">
+        <label for="tags" class="block text-sm font-medium text-gray-700"
+          >Tags, separated by commas</label
+        >
+
+        <input
+          type="text"
+          id="tags"
+          name="tags"
+          required
+          class="mt-1 block h-12 w-full rounded-md border border-gray-300 p-2 shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-200"
+        />
+      </div>
+
+      <div class="mt-4 flex justify-center">
+        <button type="submit" class="rounded bg-gray-800 px-4 py-2 text-white">
+          Submit
+        </button>
+      </div>
+    </form>
+  </div>
+</body>
