--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -1,105 +1,145 @@
-<main class="flex h-fit min-h-screen flex-col items-center justify-center gap-12 p-6">
+<main
+  class="flex h-fit min-h-screen flex-col items-center justify-center gap-12 p-6"
+>
   <h1 class="text-center text-3xl font-bold">Login to an Existing Account</h1>
 
   <!-- Add error message div -->
   <% if (typeof error !=='undefined' && error) { %>
-    <div id="error-popup"
-      class="fixed left-1/2 -translate-x-1/2 top-4 w-[28rem] bg-white shadow-lg rounded-md overflow-hidden transform transition-all duration-300 ease-out animate-slideDown">
-      <div class="border-l-4 border-red-500">
-        <!-- Enhanced title section -->
-        <div class="px-6 py-4 border-b border-gray-100 bg-gray-50">
-          <h3 class="text-2xl font-semibold text-gray-800">Error</h3>
-        </div>
+  <div
+    id="error-popup"
+    class="animate-slideDown fixed left-1/2 top-4 w-[28rem] -translate-x-1/2 transform overflow-hidden rounded-md bg-white shadow-lg transition-all duration-300 ease-out"
+  >
+    <div class="border-l-4 border-red-500">
+      <!-- Enhanced title section -->
+      <div class="border-b border-gray-100 bg-gray-50 px-6 py-4">
+        <h3 class="text-2xl font-semibold text-gray-800">Error</h3>
+      </div>
 
-        <!-- Message content -->
-        <div class="px-6 py-4">
-          <span class="text-sm text-gray-600">
-            <%= error %>
-          </span>
-        </div>
+      <!-- Message content -->
+      <div class="px-6 py-4">
+        <span class="text-sm text-gray-600"> <%= error %> </span>
       </div>
     </div>
+  </div>
 
-    <style>
-      @keyframes slideDown {
-        from {
-          transform: translate(-50%, -100%);
-          opacity: 0;
-        }
-
-        to {
-          transform: translate(-50%, 0);
-          opacity: 1;
-        }
+  <style>
+    @keyframes slideDown {
+      from {
+        transform: translate(-50%, -100%);
+        opacity: 0;
       }
 
-      .animate-slideDown {
-        animation: slideDown 0.3s ease-out forwards;
+      to {
+        transform: translate(-50%, 0);
+        opacity: 1;
       }
-    </style>
+    }
 
-    <script>
-      setTimeout(() => {
-        const errorPopup = document.getElementById('error-popup');
-        if (errorPopup) {
-          errorPopup.style.transform = 'translate(-50%, -100%)';
-          errorPopup.style.opacity = '0';
-          setTimeout(() => errorPopup.remove(), 300);
-        }
-      }, 3000);
-    </script>
-    <% } %>
+    .animate-slideDown {
+      animation: slideDown 0.3s ease-out forwards;
+    }
+  </style>
 
-      <form action="/login" method="POST" class="flex w-full flex-col gap-8 rounded-md md:w-2/3 lg:w-1/2 xl:w-1/3">
-        <div class="flex w-full flex-col">
-          <label for="profile" class="text-sm font-semibold"> Email Address</label>
-          <input type="text" id="email" name="email" required
-            class="h-12 w-full rounded-sm border-2 border-zinc-500 px-4 py-2 outline-none duration-200 focus:border-black" />
-        </div>
+  <script>
+    setTimeout(() => {
+      const errorPopup = document.getElementById("error-popup");
+      if (errorPopup) {
+        errorPopup.style.transform = "translate(-50%, -100%)";
+        errorPopup.style.opacity = "0";
+        setTimeout(() => errorPopup.remove(), 300);
+      }
+    }, 3000);
+  </script>
+  <% } %>
 
-        <div class="flex w-full flex-col">
-          <label for="password" class="text-sm font-semibold">Password</label>
-          <input type="password" id="password" name="password" required
-            class="h-12 w-full rounded-sm border-2 border-zinc-500 px-4 py-2 outline-none duration-200 focus:border-black" />
-        </div>
+  <form
+    action="/login"
+    method="POST"
+    class="flex w-full flex-col gap-8 rounded-md md:w-2/3 lg:w-1/2 xl:w-1/3"
+  >
+    <div class="flex w-full flex-col">
+      <label for="profile" class="text-sm font-semibold"> Email Address</label>
+      <input
+        type="text"
+        id="email"
+        name="email"
+        required
+        class="h-12 w-full rounded-sm border-2 border-zinc-500 px-4 py-2 outline-none duration-200 focus:border-black"
+      />
+    </div>
 
-        <button type="submit"
-          class="flex h-12 items-center justify-center gap-4 border-2 border-black bg-black fill-white font-bold uppercase tracking-tight text-white duration-200 hover:gap-8 hover:bg-white hover:fill-black hover:text-black">
-          Login
-          <svg xmlns="http://www.w3.org/2000/svg" class="size-4 -translate-y-px" viewBox="0 -960 960 960">
-            <path d="M506.26-480.67 312.93-674l62.4-62.41 255.74 255.74-255.74 255.74-62.4-62.4 193.33-193.34Z" />
-          </svg>
-        </button>
+    <div class="flex w-full flex-col">
+      <label for="password" class="text-sm font-semibold">Password</label>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        required
+        class="h-12 w-full rounded-sm border-2 border-zinc-500 px-4 py-2 outline-none duration-200 focus:border-black"
+      />
+    </div>
 
-        <div class="flex flex-col w-full gap-6">
-          <!-- Password Recovery Section -->
-          <p class="text-center">
-            <a href="/reset-password" class="text-sm font-semibold text-black hover:underline transition-colors">
-              Forgotten password?
-            </a>
-          </p>
+    <button
+      type="submit"
+      class="flex h-12 items-center justify-center gap-4 border-2 border-black bg-black fill-white font-bold uppercase tracking-tight text-white duration-200 hover:gap-8 hover:bg-white hover:fill-black hover:text-black"
+    >
+      Login
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="size-4 -translate-y-px"
+        viewBox="0 -960 960 960"
+      >
+        <path
+          d="M506.26-480.67 312.93-674l62.4-62.41 255.74 255.74-255.74 255.74-62.4-62.4 193.33-193.34Z"
+        />
+      </svg>
+    </button>
 
-          <!-- Account Creation Section -->
-          <div class="flex items-center justify-center gap-2">
-            <span class="text-sm text-gray-500">Don't have an account?</span>
-            <a href="/register" class="text-sm font-semibold text-black hover:underline transition-all">
-              Create New Account
-            </a>
-          </div>
-        </div>
-      </form>
+    <div class="flex w-full flex-col gap-6">
+      <!-- Password Recovery Section -->
+      <p class="text-center">
+        <a
+          href="/reset-password"
+          class="text-sm font-semibold text-black transition-colors hover:underline"
+        >
+          Forgotten password?
+        </a>
+      </p>
 
-      <div class="-mt-4 flex w-full flex-col items-center gap-6 md:w-2/3 lg:w-1/2 xl:w-1/3">
-        <div class="relative flex w-full items-center justify-center">
-          <hr class="absolute top-1/2 -z-10 h-0.5 w-full border-zinc-700" />
-          <span class="bg-white px-2 font-medium">or</span>
-        </div>
-
-        <div class="flex items-center justify-center rounded-md p-2 duration-200 hover:bg-zinc-200">
-          <img src="/images/facebook.svg" class="size-8 object-contain lg:size-12" alt="Facebook" />
-        </div>
-        <div class="flex items-center justify-center rounded-md p-2 duration-200 hover:bg-zinc-200"></div>
+      <!-- Account Creation Section -->
+      <div class="flex items-center justify-center gap-2">
+        <span class="text-sm text-gray-500">Don't have an account?</span>
+        <a
+          href="/register"
+          class="text-sm font-semibold text-black transition-all hover:underline"
+        >
+          Create New Account
+        </a>
       </div>
+    </div>
+  </form>
+
+  <div
+    class="-mt-4 flex w-full flex-col items-center gap-6 md:w-2/3 lg:w-1/2 xl:w-1/3"
+  >
+    <div class="relative flex w-full items-center justify-center">
+      <hr class="absolute top-1/2 -z-10 h-0.5 w-full border-zinc-700" />
+      <span class="bg-white px-2 font-medium">or</span>
+    </div>
+
+    <div
+      class="flex items-center justify-center rounded-md p-2 duration-200 hover:bg-zinc-200"
+    >
+      <img
+        src="/images/facebook.svg"
+        class="size-8 object-contain lg:size-12"
+        alt="Facebook"
+      />
+    </div>
+    <div
+      class="flex items-center justify-center rounded-md p-2 duration-200 hover:bg-zinc-200"
+    ></div>
+  </div>
 </main>
 
 <script>
