--- a/src/views/pages/post-list.ejs
+++ b/src/views/pages/post-list.ejs
@@ -3,12 +3,11 @@
 
   <!-- Post Container -->
   <% states.forEach(state => { %>
-  <h2 class="text-2xl font-semibold">
+  <h2 class="mb-2 mt-4 text-2xl font-semibold">
     <%= state.slice(0, 1).toUpperCase() %><%= state.slice(1).toLowerCase() %>
   </h2>
 
   <div id="post-container" class="grid grid-cols-1 gap-8 lg:grid-cols-4">
-    <!-- Bài viết sẽ được render ở đây -->
     <% if (typeof posts == "undefined" || !posts || posts.filter(post =>
     post.state == state).length == 0) { %>
     <p
@@ -49,9 +48,16 @@
         alt="<%= post.name %>"
         class="mb-4 h-48 w-full rounded-t-lg object-cover"
       />
+
+      <% if (post.state == "published" || post.state == "approved") { %>
+      <a href="/post/<%= post.slug %>" class="text-blue-600 hover:underline">
+        <h3 class="text-xl font-semibold"><%= post.name %></h3>
+      </a>
+      <% } else { %>
       <a href="/edit/<%= post._id %>" class="text-blue-600 hover:underline">
         <h3 class="text-xl font-semibold"><%= post.name %></h3>
       </a>
+      <% } %>
 
       <p class="mb-2 text-gray-600"><%= post.abstract %></p>
       <p class="text-sm text-gray-700">
@@ -78,3 +84,22 @@
   </div>
   <% }) %>
 </div>
+
+<script>
+  function nav(id, state) {
+    if (state == "published" || state == "approved") {
+      openDialog();
+      return;
+    }
+
+    window.location.href = `/edit/${id}`;
+  }
+
+  function closeDialog() {
+    document.getElementById("dialog").classList.replace("flex", "hidden");
+  }
+
+  function openDialog() {
+    document.getElementById("dialog").classList.replace("hidden", "flex");
+  }
+</script>
